# UCM

./: README.md
01. Programación avanzada en Python/Ejercicio_1/: enunciado.md  sketch.py
01. Programación avanzada en Python/Ejercicio_2_numpy_1/: ith.py
01. Programación avanzada en Python/Ejercicio_3_numpy_2/numpy_example_2/: zonal_stat.py
01. Programación avanzada en Python/Ejercicio_4_clases_paquetes/geom2d/: Point.py  Vector.py  pyproject.toml
01. Programación avanzada en Python/Ejercicio_4_clases_paquetes/geom2d/paquete_geometria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
01. Programación avanzada en Python/Ejercicio_4_clases_paquetes/geom2d/tests/: test_point.py  test_vector.py
01. Programación avanzada en Python/prueba_entrega_final/: consultas_clase_bicimad.ipynb  enunciado.ipynb  urls_validas.txt
01. Programación avanzada en Python/prueba_entrega_final/bicimad/: __init__.py  bicimad.py  urlemt.py
01. Programación avanzada en Python/prueba_entrega_final/tests/: test_bicimad.py  test_urlemt.py
entregable_scala/: build.sbt
entregable_scala/project/: plugins.sbt
entregable_scala/src/main/resources/: application.conf
entregable_scala/src/main/scala/: FileUtils.scala  Flight.scala  FlightDate.scala  FlightsLoader.scala  FlightsLoaderConfig.scala  Time.scala
entregable_scala/src/test/scala/org/ntic/entregable/: FileUtilsTest.scala  FlightDateTest.scala  TimeTest.scala
