[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paquete_geometria"
version = "0.0.1"
requires-python = ">=3.11"
readme = "enunciado.md"
authors = [
    {name = "Juan Archidona Ahijado", email = "juan.archidona.1@gmail.com"}
]

# Indicamos las dependencias y sus correspondientes versiones
dependencies = ["pytest >= 7.2.1", "typing >= 3.4"]

[tool.setuptools.packages.find]
exclude = ["tests"]